--- a/css/responsive.css
+++ b/css/responsive.css
@@ -21,4 +21,11 @@
     .btn{
         padding: 10px 50px;
     }
+    .ads{
+        display:flex;
+    }
+    .presentation img{
+        float: left;
+        margin-right: 20px;
+    }
 }
